Deal with various overlaps [ci skip] (fixes #485)

--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -417,7 +417,7 @@
 %   paragraph.
 % \end{TemplateDescription}
 %
-% \begin{InstanceDescription}{justification}{ragged-left}{std}
+% \begin{InstanceDescription}[fixed-word-spacing-xxx]{justification}{ragged-left}{std}
 %   \InstanceKey{end-skip}{0 pt}
 %   \InstanceKey{fixed-word-spacing}{true}
 %   \InstanceKey{indent-width}{0 pt}
@@ -429,7 +429,7 @@
 %   similar to the \LaTeXe{} \pkg{ragged2e} \env{RaggedLeft} environment.
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{justification}{ragged-right}{std}
+% \begin{InstanceDescription}[fixed-word-spacing-xxx]{justification}{ragged-right}{std}
 %   \InstanceKey{end-skip}{0 pt}
 %   \InstanceKey{fixed-word-spacing}{true}
 %   \InstanceKey{indent-width}{0 pt}
@@ -441,7 +441,7 @@
 %   similar to the \LaTeXe{} \pkg{ragged2e} \env{RaggedLeft} environment.
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{justification}{center}{std}
+% \begin{InstanceDescription}[fixed-word-spacing-xxx]{justification}{center}{std}
 %   \InstanceKey{end-skip}{0 pt}
 %   \InstanceKey{fixed-word-spacing}{true}
 %   \InstanceKey{indent-width}{0 pt}
@@ -608,7 +608,7 @@
 %   material but no immediately before it.
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{paragraph-breaking}{nobreak}{std}
+% \begin{InstanceDescription}[post-display-penalty-xxxx]{paragraph-breaking}{nobreak}{std}
 %   \InstanceKey{interline-penalty}{10 000}
 %   \InstanceKey{post-display-penalty}{10 000}
 %   \InstanceSemantics
@@ -616,7 +616,7 @@
 %   possible in \TeX{}).
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{paragraph-breaking}{nolone}{std}
+% \begin{InstanceDescription}[post-display-penalty-xxxx]{paragraph-breaking}{nolone}{std}
 %   \InstanceKey{club-penalty}{10 000}
 %   \InstanceKey{display-widow-penalty}{10 000}
 %   \InstanceKey{widow-penalty}{10 000}
@@ -678,7 +678,7 @@
 %   material but no immediately before it.
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{paragraph-breaking}{single-nobreak}{single}
+% \begin{InstanceDescription}[post-display-penalty-xxx]{paragraph-breaking}{single-nobreak}{single}
 %   \InstanceKey{interline-penalty}{10 000}
 %   \InstanceKey{post-display-penalty}{10 000}
 %   \InstanceSemantics
@@ -686,7 +686,7 @@
 %   possible in \TeX{}).
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{paragraph-breaking}{single-noclub}{single}
+% \begin{InstanceDescription}[display-club-penalty-xxx]{paragraph-breaking}{single-noclub}{single}
 %   \InstanceKey{club-penalty}{10 000}
 %   \InstanceKey{display-club-penalty}{10 000}
 %   \InstanceSemantics
@@ -694,7 +694,7 @@
 %   line (as far as is possible in \TeX{}).
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{paragraph-breaking}{single-nolone}{single}
+% \begin{InstanceDescription}[display-widow-penalty-xxx]{paragraph-breaking}{single-nolone}{single}
 %   \InstanceKey{club-penalty}{10 000}
 %   \InstanceKey{display-club-penalty}{10 000}
 %   \InstanceKey{display-widow-penalty}{10 000}
@@ -704,7 +704,7 @@
 %   widow line (as far as is possible in \TeX{}).
 % \end{InstanceDescription}
 %
-% \begin{InstanceDescription}{paragraph-breaking}{single-nowidow}{single}
+% \begin{InstanceDescription}[display-widow-penalty-xxx]{paragraph-breaking}{single-nowidow}{single}
 %   \InstanceKey{display-widow-penalty}{10 000}
 %   \InstanceKey{widow-penalty}{10 000}
 %   \InstanceSemantics
