Only need to track cctab number in IniTeX mode

--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -146,8 +146,10 @@
 %   tables need to be followed. There is also a sequence stack for the
 %   dynamic tables themselves.
 %    \begin{macrocode}
+%<*initex>
 \int_new:N  \g_@@_allocate_int
 \int_gset:Nn \g_@@_allocate_int { -1 }
+%</initex>
 \int_new:N \g_@@_stack_int
 \seq_new:N \g_@@_stack_seq
 %    \end{macrocode}
