Add peek_spaces_remove (we could now deprecate ignore_spaces functions)

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1500,6 +1500,14 @@
 % \end{verbatim}
 % \end{function}
 %
+% \begin{function}[added = 2018-10-01]{\peek_spaces_remove:n}
+%   \begin{syntax}
+%     \cs{peek_spaces_remove:n} \Arg{code}
+%   \end{syntax}
+%   Removes explicit and implicit space tokens (category code~$10$ and
+%   character code~$32$) from the input stream, then inserts \meta{code}.
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
@@ -5332,6 +5340,29 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\peek_spaces_remove:n, \@@_spaces_remove:}
+%   Repeatedly use \cs{@@_true_remove:w} to remove a space and call
+%   \cs{@@_true_aux:w}.
+%    \begin{macrocode}
+\cs_new_protected:Npn \peek_spaces_remove:n #1
+  {
+    \cs_set:Npx \@@_false:w { \exp_not:n {#1} }
+    \group_align_safe_begin:
+    \cs_set:Npn \@@_true_aux:w { \peek_after:Nw \@@_spaces_remove: }
+    \@@_true_aux:w
+  }
+\cs_new_protected:Npn \@@_spaces_remove:
+  {
+    \if_meaning:w \l_peek_token \c_space_token
+      \exp_after:wN \@@_true_remove:w
+    \else:
+      \group_align_safe_end:
+      \exp_after:wN \@@_false:w
+    \fi:
+  }
+%    \end{macrocode}
 % \end{macro}
 %
 %    \begin{macrocode}
