Replace a use of ignore_spaces peek function by peek_spaces_remove

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -3133,15 +3133,18 @@
       \group_align_safe_begin:
         \tex_escapechar:D = 92 \scan_stop:
         \tl_clear:N \l_@@_v_arg_tl
-        \peek_meaning_remove_ignore_spaces:NTF \c_group_begin_token
+        \peek_spaces_remove:n
           {
-            \group_align_safe_end:
-            \@@_grab_v_bgroup:
-          }
-          {
-            \peek_N_type:TF
-              { \@@_grab_v_aux_test:N }
-              { \@@_grab_v_aux_abort:n { } }
+            \peek_meaning_remove:NTF \c_group_begin_token
+              {
+                \group_align_safe_end:
+                \@@_grab_v_bgroup:
+              }
+              {
+                \peek_N_type:TF
+                  { \@@_grab_v_aux_test:N }
+                  { \@@_grab_v_aux_abort:n { } }
+              }
           }
   }
 \cs_new_protected:Npn \@@_grab_v_group_end:
