--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1500,9 +1500,9 @@
 % \end{verbatim}
 % \end{function}
 %
-% \begin{function}[added = 2018-10-01]{\peek_spaces_remove:n}
+% \begin{function}[added = 2018-10-01]{\peek_remove_spaces:n}
 %   \begin{syntax}
-%     \cs{peek_spaces_remove:n} \Arg{code}
+%     \cs{peek_remove_spaces:n} \Arg{code}
 %   \end{syntax}
 %   Removes explicit and implicit space tokens (category code~$10$ and
 %   character code~$32$) from the input stream, then inserts \meta{code}.
