--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -2234,18 +2234,18 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\peek_spaces_remove:n, \@@_spaces_remove:}
+% \begin{macro}{\peek_remove_spaces:n, \@@_remove_spaces:}
 %   Repeatedly use \cs{@@_true_remove:w} to remove a space and call
 %   \cs{@@_true_aux:w}.
 %    \begin{macrocode}
-\cs_new_protected:Npn \peek_spaces_remove:n #1
+\cs_new_protected:Npn \peek_remove_spaces:n #1
   {
     \cs_set:Npx \@@_false:w { \exp_not:n {#1} }
     \group_align_safe_begin:
-    \cs_set:Npn \@@_true_aux:w { \peek_after:Nw \@@_spaces_remove: }
+    \cs_set:Npn \@@_true_aux:w { \peek_after:Nw \@@_remove_spaces: }
     \@@_true_aux:w
   }
-\cs_new_protected:Npn \@@_spaces_remove:
+\cs_new_protected:Npn \@@_remove_spaces:
   {
     \if_meaning:w \l_peek_token \c_space_token
       \exp_after:wN \@@_true_remove:w
@@ -2429,7 +2429,7 @@
 %     \peek_charcode_ignore_spaces:N, \peek_charcode_remove_ignore_spaces:N,
 %     \peek_meaning_ignore_spaces:N, \peek_meaning_remove_ignore_spaces:N
 %   }
-%   To ignore spaces, remove them using \cs{peek_spaces_remove:n}
+%   To ignore spaces, remove them using \cs{peek_remove_spaces:n}
 %   before running the tests.
 %    \begin{macrocode}
 \tl_map_inline:nn
@@ -2441,17 +2441,17 @@
   {
     \cs_new_protected:cpx { peek_#1_ignore_spaces:NTF } ##1##2##3
       {
-        \peek_spaces_remove:n
+        \peek_remove_spaces:n
           { \exp_not:c { peek_#1:NTF } ##1 {##2} {##3} }
       }
     \cs_new_protected:cpx { peek_#1_ignore_spaces:NT } ##1##2
       {
-        \peek_spaces_remove:n
+        \peek_remove_spaces:n
           { \exp_not:c { peek_#1:NT } ##1 {##2} }
       }
     \cs_new_protected:cpx { peek_#1_ignore_spaces:NF } ##1##2
       {
-        \peek_spaces_remove:n
+        \peek_remove_spaces:n
           { \exp_not:c { peek_#1:NF } ##1 {##2} }
       }
   }
