Enable core cctabs for all engines

--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -344,64 +344,43 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{variable}{\c_code_cctab}
-% \begin{variable}{\c_document_cctab}
-% \begin{variable}{\c_initex_cctab}
-% \begin{variable}{\c_other_cctab}
-% \begin{variable}{\c_str_cctab}
+% \begin{variable}
+%   {
+%     \c_code_cctab     ,
+%     \c_document_cctab ,
+%     \c_initex_cctab   ,
+%     \c_other_cctab    ,
+%     \c_str_cctab
+%   }  
 %   Creating category code tables is easy using the function above.
 %   The \texttt{other} and \texttt{string} ones are done by completely
-%   ignoring the existing codes as this makes life a lot less complex. The
-%   table for \pkg{expl3} category codes is always needed, whereas when in
-%   package mode the rest can be copied from the existing \LaTeXe{} package
-%   \pkg{luatex}.
+%   ignoring the existing codes as this makes life a lot less complex.
 %    \begin{macrocode}
-\sys_if_engine_luatex:T
+\cctab_new:N \c_code_cctab
+\cctab_new:N \c_document_cctab
+\cctab_new:N \c_other_cctab
+\cctab_new:N \c_str_cctab
+\cctab_gset:Nn \c_code_cctab { }
+\cctab_gset:Nn \c_document_cctab
   {
-    \cctab_new:N \c_code_cctab
-    \cctab_gset:Nn \c_code_cctab { }
+    \char_set_catcode_space:n          { 9 }
+    \char_set_catcode_space:n          { 32 }
+    \char_set_catcode_other:n          { 58 }
+    \char_set_catcode_math_subscript:n { 95 }
+    \char_set_catcode_active:n         { 126 }
   }
-%<*package>
-\sys_if_engine_luatex:T
+\cctab_gset:Nn \c_other_cctab
   {
-    \cs_new_eq:NN \c_document_cctab \CatcodeTableLaTeX
-    \cs_new_eq:NN \c_initex_cctab   \CatcodeTableIniTeX
-    \cs_new_eq:NN \c_other_cctab    \CatcodeTableOther
-    \cs_new_eq:NN \c_str_cctab      \CatcodeTableString
+    \int_step_inline:nnn { 0 } { 127 }
+      { \char_set_catcode_other:n {#1} }
   }
-%</package>
-%<*initex>
-\sys_if_engine_luatex:T
+\cctab_gset:Nn \c_str_cctab
   {
-    \cctab_new:N \c_document_cctab
-    \cctab_new:N \c_other_cctab
-    \cctab_new:N \c_str_cctab
-    \cctab_gset:Nn \c_document_cctab
-      {
-        \char_set_catcode_space:n          { 9 }
-        \char_set_catcode_space:n          { 32 }
-        \char_set_catcode_other:n          { 58 }
-        \char_set_catcode_math_subscript:n { 95 }
-        \char_set_catcode_active:n         { 126 }
-      }
-    \cctab_gset:Nn \c_other_cctab
-      {
-        \int_step_inline:nnn { 0 } { 127 }
-          { \char_set_catcode_other:n {#1} }
-      }
-    \cctab_gset:Nn \c_str_cctab
-      {
-        \int_step_inline:nnn { 0 } { 127 }
-          { \char_set_catcode_other:n {#1} }
-        \char_set_catcode_space:n { 32 }
-      }
+    \int_step_inline:nnn { 0 } { 127 }
+      { \char_set_catcode_other:n {#1} }
+    \char_set_catcode_space:n { 32 }
   }
-%</initex>
 %    \end{macrocode}
-% \end{variable}
-% \end{variable}
-% \end{variable}
-% \end{variable}
 % \end{variable}
 %
 % \subsection{Messages}
