--- a/l3experimental/l3cctab/l3cctab.dtx
+++ b/l3experimental/l3cctab/l3cctab.dtx
@@ -52,6 +52,11 @@
 %
 % \section{\pkg{l3cctab} documentation}
 %
+% A category code table enables rapid switching of all category codes in
+% one operation. For \LuaTeX{}, this is possible over the entire Unicode
+% range. For other engines, only the $8$-bit range ($0$-$255$) is covered by
+% such tables.
+%
 % \begin{function}{\cctab_new:N}
 %   \begin{syntax}
 %     \cs{cctab_new:N} \meta{category code table}
