Make xparse less noisy

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -4604,7 +4604,7 @@
 \keys_define:nn { xparse }
   {
     log-declarations .bool_set:N = \l_@@_log_bool ,
-    log-declarations .initial:n  = true
+    log-declarations .initial:n  = false
   }
 \keys_set:nV { xparse } \l_@@_options_clist
 \bool_if:NF \l_@@_log_bool
