Rename an internal variable

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -545,10 +545,10 @@
 %<@@=msg>
 %    \end{macrocode}
 %
-% \begin{variable}{\l_@@_internal_tl}
+% \begin{variable}{\l_@@_tmp_tl}
 %   A general scratch for the module.
 %    \begin{macrocode}
-\tl_new:N \l_@@_internal_tl
+\tl_new:N \l_@@_tmp_tl
 %    \end{macrocode}
 % \end{variable}
 %
@@ -1189,13 +1189,13 @@
     {
       \tl_if_empty:nF {#1}
         { \exp_args:No \iow_term:n { \use_none:n #1 } }
-      \tl_set:Nn \l_@@_internal_tl {#2}
+      \tl_set:Nn \l_@@_tmp_tl {#2}
       \__kernel_iow_with:Nnn \tex_newlinechar:D { 10 }
         {
           \__kernel_iow_with:Nnn \tex_errorcontextlines:D { -1 }
             {
               \tex_showtokens:D \exp_after:wN \exp_after:wN \exp_after:wN
-                { \exp_after:wN \l_@@_internal_tl }
+                { \exp_after:wN \l_@@_tmp_tl }
             }
         }
     }
