Generalise message module <-> name concept

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -211,6 +211,15 @@
 %   be included.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2019-10-10]{\msg_module_name:n}
+%   \begin{syntax}
+%     \cs{msg_module_name:n} \Arg{module}
+%   \end{syntax}
+%   Expands to the public name of the \meta{module} as defined by
+%   \cs{g_msg_module_name_prop} (or otherwise leaves the \meta{module}
+%   unchanged).
+% \end{function}
+%
 % \begin{function}[EXP,updated = 2018-09-30]{\msg_see_documentation_text:n}
 %   \begin{syntax}
 %     \cs{msg_see_documentation_text:n} \Arg{module}
@@ -227,7 +236,7 @@
 %   \cs{g_msg_module_documentation_prop}
 % \end{function}
 %
-% \begin{variable}{\g_msg_module_documentation_prop}
+% \begin{variable}[added = 2018-10-10]{\g_msg_module_name_prop}
 %   Provides a mapping between the module name used for messages, and that
 %   for documentation. For example, \LaTeX{}3 core messages are stored in
 %   the reserved |LaTeX| tree, but are printed as |LaTeX3|.
@@ -885,23 +894,27 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{variable}{\g_msg_module_documentation_prop}
+% \begin{variable}{\g_msg_module_name_prop}
+%   For storing public module names
 %    \begin{macrocode}
-\prop_new:N \g_msg_module_documentation_prop
-\prop_gput:Nnn \g_msg_module_documentation_prop { LaTeX } { LaTeX3 }
+\prop_new:N \g_msg_module_name_prop
+\prop_gput:Nnn \g_msg_module_name_prop { LaTeX } { LaTeX3 }
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}{\msg_see_documentation_text:n}
+% \begin{macro}[EXP]{\msg_moudle_name:n, \msg_see_documentation_text:n}
 %   Contextual footer information, with the potential to give modules an
 %   alternative name.
 %    \begin{macrocode}
+\cs_new:Npn \msg_module_name:n #1
+  {
+    \prop_if_in:NnTF \g_msg_module_name_prop {#1}
+      { \prop_item:Nn \g_msg_module_name_prop {#1} }
+      {#1}
+  }
 \cs_new:Npn \msg_see_documentation_text:n #1
   {
-    \\ \\ See~the~
-    \prop_if_in:NnTF \g_msg_module_documentation_prop {#1}
-      { \prop_item:Nn \g_msg_module_documentation_prop {#1} }
-      {#1} ~
+    \\ \\ See~the~ \msg_module_name:n {#1} ~
     documentation~for~further~information.
   }
 %    \end{macrocode}
