Format info/warning messages as for LaTeX2e

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -190,11 +190,12 @@
 %   Produces the standard text
 %   \begin{quote}
 %     \ttfamily
-%     \meta{module} warning
+%     Package \meta{module} Warning
 %   \end{quote}
 %   This function can be redefined to alter the language in which the
 %   message is given, using |#1| as the name of the \meta{module} to
-%   be included.
+%   be included.  The \meta{type} of \meta{module} may be adjusted:
+%   |Package| is the standard outcome: see \cs{msg_module_type:n}.
 % \end{function}
 %
 % \begin{function}[EXP]{\msg_info_text:n}
@@ -204,11 +205,12 @@
 %   Produces the standard text:
 %   \begin{quote}
 %     \ttfamily
-%     \meta{module} info
+%     Package \meta{module} Info
 %   \end{quote}
 %   This function can be redefined to alter the language in which the
 %   message is given, using |#1| as the name of the \meta{module} to
-%   be included.
+%   be included. The \meta{type} of \meta{module} may be adjusted:
+%   |Package| is the standard outcome: see \cs{msg_module_type:n}.
 % \end{function}
 %
 % \begin{function}[EXP, added = 2019-10-10]{\msg_module_name:n}
@@ -578,6 +580,14 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\l_@@_name_str, \l_@@_text_str}
+%   Used to save module info when creating messages.
+%    \begin{macrocode}
+\str_new:N \l_@@_name_str
+\str_new:N \l_@@_text_str
+%    \end{macrocode}
+% \end{variable}
+%
 % \subsection{Creating messages}
 %
 % Messages are created and used separately, so there two parts to
@@ -877,7 +887,7 @@
 %</initex>
 %    \end{macrocode}
 %
-% \begin{macro}
+% \begin{macro}[EXP]
 %   {
 %     \msg_fatal_text:n    ,
 %     \msg_critical_text:n ,
@@ -885,8 +895,11 @@
 %     \msg_warning_text:n  ,
 %     \msg_info_text:n
 %   }
+% \begin{macro}[EXP]{\@@_text:nn}
+% \begin{macro}[EXP]{\@@_text:n}
 %   A function for issuing messages: both the text and order could
-%   in principle vary.
+%   in principle vary. The module name may be empty for kernel messages,
+%   hence the slightly contorted code path for a space.
 %    \begin{macrocode}
 \cs_new:Npn \msg_fatal_text:n #1
   {
@@ -902,13 +915,32 @@
   }
 \cs_new:Npn \msg_warning_text:n #1
   {
-    #1~warning
+    \exp_args:Nf \tl_if_blank:nF { \msg_module_type:n {#1} }
+      { \msg_module_type:n {#1} ~ }
+    \msg_module_name:n {#1} ~
+    Warning
   }
 \cs_new:Npn \msg_info_text:n #1
   {
-    #1~info
+    \exp_args:Nf \tl_if_blank:nF { \msg_module_type:n {#1} }
+      { \msg_module_type:n {#1} ~ }
+    \msg_module_name:n {#1} ~
+    Info
+  }
+\cs_new:Npn \@@_text:nn #1#2
+  {
+    \exp_arg:Nf \@@_text:n { \msg_module_type:n {#1} }
+    \msg_module_name:n {#1} ~
+    #2
+  }
+\cs_new:Npn \@@_text:n #1
+  {
+    \tl_if_blank:nF {#1}
+      { #1 ~ }
   }
 %    \end{macrocode}
+% \end{macro}
+% \end{macro}
 % \end{macro}
 %
 % \begin{variable}{\g_msg_module_name_prop, \g_msg_module_type_prop}
@@ -922,7 +954,7 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{macro}[EXP]{\msg_moudle_type:n}
+% \begin{macro}[EXP]{\msg_module_type:n}
 %   Contextual footer information, with the potential to give modules an
 %   alternative name.
 %    \begin{macrocode}
@@ -1116,11 +1148,28 @@
 %    \begin{macrocode}
   \@@_class_new:nn { warning }
     {
-      \msg_term:n
+      \str_set:Nx \l_@@_text_str { \msg_warning_text:n {#1} }
+      \str_set:Nx \l_@@_name_str { \msg_module_name:n {#1} }
+      \iow_term:n { }
+      \use:x
         {
-          \msg_warning_text:n {#1} : ~ "#2" \\ \\
-          \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+          \iow_wrap:nnnN
+            {
+              \l_@@_text_str : ~
+              \exp_not:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+            }
+            {
+              ( \l_@@_name_str )
+              \prg_replicate:nn
+                {
+                    \str_count:N \l_@@_text_str
+                  - \str_count:N \l_@@_name_str
+                }
+                { ~ }
+            }
+            { } \iow_term:n
         }
+      \iow_term:n { }
     }
 %    \end{macrocode}
 % \end{macro}
@@ -1141,11 +1190,28 @@
 %    \begin{macrocode}
   \@@_class_new:nn { info }
     {
-      \msg_log:n
+      \str_set:Nx \l_@@_text_str { \msg_info_text:n {#1} }
+      \str_set:Nx \l_@@_name_str { \msg_module_name:n {#1} }
+      \iow_log:n { }
+      \use:x
         {
-          \msg_info_text:n {#1} : ~ "#2" \\ \\
-          \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+          \iow_wrap:nnnN
+            {
+              \l_@@_text_str : ~
+              \exp_not:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+            }
+            {
+              ( \l_@@_name_str )
+              \prg_replicate:nn
+                {
+                    \str_count:N \l_@@_text_str
+                  - \str_count:N \l_@@_name_str
+                }
+                { ~ }
+            }
+            { } \iow_log:n
         }
+      \iow_log:n { }
     }
 %    \end{macrocode}
 % \end{macro}
