Update error message and some comments in l3regex

--- a/l3kernel/l3regex.dtx
+++ b/l3kernel/l3regex.dtx
@@ -877,7 +877,7 @@
 %   \item \cs{g_@@_thread_state_intarray} maps each \meta{thread} (with
 %     $\texttt{min_active} \leq \meta{thread} < \texttt{max_active}$) to
 %     the \meta{state} in which the \meta{thread} currently is. The
-%     \meta{threads} or ordered starting from the best to the least
+%     \meta{threads} are ordered starting from the best to the least
 %     preferred.
 %   \item \tn{toks}\meta{thread} holds the submatch information for the
 %     \meta{thread}, as the contents of a property list.
@@ -899,9 +899,6 @@
 %     block corresponding to one match with all its submatches stored in
 %     consecutive entries.
 % \end{itemize}
-% \tn{count} registers are not abused, which means that we can safely
-% use named integers in this module. Note that \tn{box} registers are
-% not abused either; maybe we could leverage those for some purpose.
 %
 % The code is structured as follows. Variables are introduced in the
 % relevant section. First we present some generic helper functions. Then
@@ -6415,7 +6412,8 @@
   { Invalid~nested~'\iow_char:N\\c'~escape~in~regular~expression. }
   {
     The~'\iow_char:N\\c'~escape~cannot~be~used~within~
-    a~control~sequence~test~'\iow_char:N\\c{...}'.~
+    a~control~sequence~test~'\iow_char:N\\c{...}'~
+    nor~another~category~test.~
     To~combine~several~category~tests,~use~'\iow_char:N\\c[...]'.
   }
 \__kernel_msg_new:nnnn { kernel } { c-C-invalid }
